Удаление слежки за файлами настроек vs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ﻿################################################################################
 # Данный GITIGNORE-файл был автоматически создан Microsoft(R) Visual Studio.
 ################################################################################
-
-/.vs/gitrep/FileContentIndex/17546283-e3bb-4989-9318-e86d8bad42b2.vsidx
+# для игнора изменений настроек vs
+/.vs
